--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Aquí va el título de la página WEB</h1>
     <P>Primer párrafo creado desde GitHub</P>
+    <P>Segundo párrado creado desde GitHub</P>
 </body>
 </html>
